k8s/aspire-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspire-app
  namespace: aspire-tool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aspire
  template:
    metadata:
      labels:
        app: aspire
    spec:
      containers:
      - name: aspire
        image: aspire_image:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: projects-volume
          mountPath: /home/mambauser/projects
      volumes:
      - name: projects-volume
        persistentVolumeClaim:
          claimName: aspire-projects-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: aspire-service
  namespace: aspire-tool
spec:
  selector:
    app: aspire
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspire-ingress
  namespace: aspire-tool
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: mini-node-iacs.bigan.eu
    http:
      paths:
      - path: /aspire(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: aspire-service
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspire-assets-ingress
  namespace: aspire-tool
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: mini-node-iacs.bigan.eu
    http:
      paths:
      - path: /_astro
        pathType: Prefix
        backend:
          service:
            name: aspire-service
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: aspire-service
            port:
              number: 3000
      - path: /.*\.(png|jpg|jpeg)$
        pathType: ImplementationSpecific
        backend:
          service:
            name: aspire-service
            port:
              number: 3000
